<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2EBE7"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo2"
            android:src="@drawable/ic_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/paws_veterinary1"
            android:textColor="#064E3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="@id/logo" />


        <ImageButton
            android:id="@+id/hamburger_button"
            android:layout_width="87dp"
            android:layout_height="57dp"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/menu1"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/vet_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo4"
                android:scaleType="centerCrop"
                android:src="@drawable/dog_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000"
                android:gravity="center"
                android:orientation="vertical"> <!-- Semi-transparent background -->

                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/welcome_to_paws_veterinary_clinic"
                    android:textColor="#65A30D"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/providing_quality_care_for_your_pets"
                    android:textColor="#65A30D"
                    android:textSize="18sp" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/our_services_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/our_services"
            android:textColor="#064E3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/our_services_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.975" />

        <TextView
            android:id="@+id/our_services_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/browse_our_range_of_veterinary_services"
            android:textColor="#064E3B"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintVertical_bias="0.139" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/our_services_subtitle" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/our_services_subtitle">

            <TextView
                android:id="@+id/healthy_pets_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/healthy_pets_for_a_happy_life"
                android:textColor="#064E3B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/healthy_pets_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/read_information_articles_on_pet_care"
                android:textColor="#064E3B"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="409dp"
            android:layout_height="116dp"
            android:background="#E2EBE7"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/our_team_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/our_team"
                android:textColor="#064E3B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/our_team_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/meet_our_experienced_veterinarians"
                android:textColor="#064E3B"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/book_appointment_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/book_appointment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_an_appointment"
                android:textColor="#064E3B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/preferred_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/preferred_date"
                android:textColor="#064E3B"
                android:textSize="18sp"
                tools:ignore="TextViewEdits" />

            <EditText
                android:id="@+id/preferred_date_input"
                android:layout_width="367dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/select_a_date"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="#064E3B"
                android:textColorHint="#A0A0A0" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#65A30D"
                android:padding="12dp"
                android:text="@string/submit"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#E2EBE7"
        app:menu="@menu/drawer_menu"
        app:itemTextColor="@color/color_selector" />

</androidx.drawerlayout.widget.DrawerLayout>
